--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -30,6 +30,8 @@ target 'Modacity' do
   
   pod 'BWHorizontalTableView'
   
+  pod 'Amplitude-iOS', '~> 4.0.4'
+  
   target 'ModacityTests' do
     inherit! :search_paths
     # Pods for testing
