--- a/Modacity/Modacity/Info.plist
+++ b/Modacity/Modacity/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>4</string>
 	<key>FacebookAppID</key>
 	<string>1549217105115990</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
@@ -58,8 +58,12 @@
 		<key>NSAllowsArbitraryLoadsInWebContent</key>
 		<true/>
 	</dict>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Modacity will access to calendar to set reminder.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Musicians, recording yourself is essential for progress!</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>Modacity will access to Reminder</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Lato-Bold.ttf</string>
