--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -32,6 +32,8 @@ target 'Modacity' do
   
   pod 'Amplitude-iOS', '~> 4.0.4'
   
+  pod 'SwiftMessages'
+  
   target 'ModacityTests' do
     inherit! :search_paths
     # Pods for testing
