--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -34,6 +34,8 @@ target 'Modacity' do
   
   pod 'SwiftMessages'
   
+  pod 'MBProgressHUD'
+  
   target 'ModacityTests' do
     inherit! :search_paths
     # Pods for testing
