Fixed playlist crashing issue.

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -35,6 +35,8 @@ def shared_pods
     
     pod 'Fabric', '~> 1.7.7'
     pod 'Crashlytics', '~> 3.10.2'
+    
+    pod 'SplunkMint'
 end
 
 target 'Modacity' do
