ver 1.7(13) : added push notification permission alerts failure callbacks,  working in progress for details feature.

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -37,6 +37,9 @@ def shared_pods
     pod 'Crashlytics', '~> 3.10.2'
     
     pod 'SplunkMint'
+    
+    pod 'JTChartView'
+    pod 'Charts'
 end
 
 target 'Modacity' do
