--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -24,7 +24,7 @@ def shared_pods
     
     pod 'SCSiriWaveformView'
     pod 'FDWaveformView'
-    
+
     pod 'BWHorizontalTableView'
     
     pod 'Amplitude-iOS', '~> 4.0.4'
@@ -40,6 +40,8 @@ def shared_pods
     
     pod 'JTChartView'
     pod 'Charts'
+    
+#    pod 'SCWaveformView'
 end
 
 target 'Modacity' do
