Ver 1.9(4) : Added GUI version for premium unlock feature.

--- a/Modacity/Modacity/Info-dev.plist
+++ b/Modacity/Modacity/Info-dev.plist
@@ -71,6 +71,7 @@
 		<string>lato-italic.ttf</string>
 		<string>Lato-Regular.ttf</string>
 		<string>lato-bolditalic.ttf</string>
+		<string>Lato-Black.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
