--- a/Modacity/Modacity/Info.plist
+++ b/Modacity/Modacity/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>4</string>
 	<key>FacebookAppID</key>
 	<string>1549217105115990</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
@@ -73,6 +73,7 @@
 		<string>lato-italic.ttf</string>
 		<string>Lato-Regular.ttf</string>
 		<string>lato-bolditalic.ttf</string>
+		<string>Lato-Black.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
