Premium upgrade feature commit. (temp)

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -30,7 +30,6 @@ def shared_pods
     pod 'Amplitude-iOS', '~> 4.0.4'
     
     pod 'SwiftMessages'
-    
     pod 'MBProgressHUD'
     
     pod 'Fabric', '~> 1.7.7'
@@ -40,6 +39,8 @@ def shared_pods
     
     pod 'JTChartView'
     pod 'Charts'
+    
+    pod 'SwiftyReceiptValidator'
     
 #    pod 'SCWaveformView'
 end
