Home page refreshing method change.

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -43,6 +43,8 @@ def shared_pods
     pod 'SwiftyReceiptValidator'
     
     pod 'CHGInputAccessoryView'
+    
+    pod 'DGActivityIndicatorView'
 #    pod 'SCWaveformView'
 end
 
