Network status checking (online, offline) for listener management (IN PROGRESS)

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -45,6 +45,8 @@ def shared_pods
     pod 'CHGInputAccessoryView'
     
     pod 'DGActivityIndicatorView'
+    
+    pod 'ReachabilitySwift'
 #    pod 'SCWaveformView'
 end
 
