AppsFlyer still needs to be added to analytics

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -6,6 +6,7 @@ def shared_pods
     pod 'Intercom'
     pod 'TPKeyboardAvoiding'
     pod 'ObjectMapper'
+    pod 'AppsFlyerFramework'
     
     pod 'Firebase/Core'
     pod 'Firebase/Auth'
