ver 2.3.6(6) fixed trello issues

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -45,6 +45,8 @@ def shared_pods
     pod 'DGActivityIndicatorView'
     
     pod 'ReachabilitySwift'
+    
+    pod 'YouTubePlayer-Swift'
 end
 
 target 'Modacity' do
