Recording file format to m4a and save it to mp3 format.

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -47,6 +47,10 @@ def shared_pods
     pod 'ReachabilitySwift'
     
     pod 'YouTubePlayer-Swift'
+    
+    pod 'AudioKit'
+    
+    pod 'GZZAudioConverter'
 end
 
 target 'Modacity' do
