Trello item issues fixed on improvement textfields case-sensitive, misc-practice items statistics,  playback speed issue, audio converting for m4a

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -50,7 +50,7 @@ def shared_pods
     
     pod 'AudioKit'
     
-    pod 'GZZAudioConverter'
+#    pod 'GZZAudioConverter'
 end
 
 target 'Modacity' do
