Custom deliberate suggestion and hypos : store & sync

--- a/Modacity/Modacity/Supporting/deliberate_suggestions.plist
+++ b/Modacity/Modacity/Supporting/deliberate_suggestions.plist
@@ -11,6 +11,8 @@
 	<key>suggestions</key>
 	<array>
 		<dict>
+			<key>id</key>
+			<string>01</string>
 			<key>suggestion</key>
 			<string>Notes</string>
 			<key>hypos</key>
@@ -22,6 +24,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>02</string>
 			<key>suggestion</key>
 			<string>Rhythm</string>
 			<key>hypos</key>
@@ -33,6 +37,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>03</string>
 			<key>suggestion</key>
 			<string>Consistency</string>
 			<key>hypos</key>
@@ -45,6 +51,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>04</string>
 			<key>suggestion</key>
 			<string>Tone</string>
 			<key>hypos</key>
@@ -56,6 +64,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>05</string>
 			<key>suggestion</key>
 			<string>Emotion</string>
 			<key>hypos</key>
@@ -67,6 +77,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>06</string>
 			<key>suggestion</key>
 			<string>Phrasing</string>
 			<key>hypos</key>
@@ -78,6 +90,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>07</string>
 			<key>suggestion</key>
 			<string>Technique</string>
 			<key>hypos</key>
@@ -89,6 +103,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>08</string>
 			<key>suggestion</key>
 			<string>Enjoyment</string>
 			<key>hypos</key>
@@ -100,6 +116,8 @@
 			</array>
 		</dict>
 		<dict>
+			<key>id</key>
+			<string>09</string>
 			<key>suggestion</key>
 			<string>Ease</string>
 			<key>hypos</key>
