Ver 2.4.0(3) : [MD-170] Reminders completed.

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -48,8 +48,8 @@ def shared_pods
     
     pod 'YouTubePlayer-Swift'
     
-    pod 'AudioKit'
-    
+#    pod 'AudioKit'
+
 #    pod 'GZZAudioConverter'
 end
 
