Calendar setting in custom picker for reminder repeat setting,  Removed reminder in Practice reminder page.

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -48,8 +48,9 @@ def shared_pods
     
     pod 'YouTubePlayer-Swift'
     
+    pod 'SwiftMoment'
+#    pod 'CalendarView'
 #    pod 'AudioKit'
-
 #    pod 'GZZAudioConverter'
 end
 
