MD-155, MD-430, MD-417, MD-403, MD-443, MD-433

--- a/Modacity/Modacity/Supporting/defaultdata.plist
+++ b/Modacity/Modacity/Supporting/defaultdata.plist
@@ -30,9 +30,9 @@
 					<key>note</key>
 					<string>You can access session-level notes in 3 places</string>
 					<key>subtitle</key>
-					<string>From the home screen's 'Practice Sessions' tab, press the '...' menu button and select 'Details' to see notes.
-Or, on the practice session planning page, press the upper right hand corner's Note icon.
-Finally you can access the session's notes on the Congratulations Screen after finishing practice, in case you want to add final reflections or to-dos</string>
+					<string>From the home screen&apos;s &apos;Practice Lists&apos; tab, press the &apos;...&apos; menu button and select &apos;Details&apos; to see notes.
+Or, on the practice list planning page, press the upper right hand corner&apos;s Note icon.
+Finally you can access the session&apos;s notes on the Congratulations Screen after finishing practice, in case you want to add final reflections or to-dos</string>
 				</dict>
 			</array>
 			<key>practice_items</key>
@@ -232,11 +232,11 @@ Finally you can access the session's notes on the Congratulations Screen after f
 					<string>👋
 👉 TAP HERE FIRST</string>
 					<key>subtitle</key>
-					<string>Congrats! You're already practicing with Modacity.
+					<string>Congrats! You&apos;re already practicing with Modacity.
 
 We will use these practice notes to help you learn the app.
 
-This tutorial is a Modacity practice session, so you can track your time and mastery.
+This tutorial is a Modacity practice list, so you can track your time and mastery.
 
 To delete this note, press the trash icon at the top right.</string>
 				</dict>
@@ -246,15 +246,15 @@ To delete this note, press the trash icon at the top right.</string>
 					<key>note</key>
 					<string>Why Modacity, in 2 sentences</string>
 					<key>subtitle</key>
-					<string>No matter what your instrument or genre, Modacity helps you practice better and "master faster".
+					<string>No matter what your instrument or genre, Modacity helps you practice better and &quot;master faster&quot;.
 
-You'll be more efficient, effective, joyful, and focused.</string>
+You&apos;ll be more efficient, effective, joyful, and focused.</string>
 				</dict>
 				<dict>
 					<key>id</key>
 					<string>replaceMeWithAProperID3</string>
 					<key>note</key>
-					<string>Swipe up to archive this note, then press "Done"</string>
+					<string>Swipe up to archive this note, then press &quot;Done&quot;</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -274,11 +274,11 @@ You'll be more efficient, effective, joyful, and focused.</string>
 					<key>note</key>
 					<string>How to define items</string>
 					<key>subtitle</key>
-					<string>A "practice item" is anything you practice.
+					<string>A &quot;practice item&quot; is anything you practice.
 
 In general they should take 30 seconds to 5 minutes to perform.
 
-Visit the Practice Items tab or press the big "+" button, and start typing in the search bar to create your own.</string>
+Visit the Practice Items tab or press the big &quot;+&quot; button, and start typing in the search bar to create your own.</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -288,11 +288,11 @@ Visit the Practice Items tab or press the big "+" button, and start typing in th
 					<key>subtitle</key>
 					<string>If you can name it you can tame it.
 
-Consider writing fun, empowering names like "Scales - Fluent" instead of just "Scales".
+Consider writing fun, empowering names like &quot;Scales - Fluent&quot; instead of just &quot;Scales&quot;.
 
-You may break songs into components like "Autumn Leaves - Chords" and "Autumn Leaves - Soloing".
+You may break songs into components like &quot;Autumn Leaves - Chords&quot; and &quot;Autumn Leaves - Soloing&quot;.
 
-Classical musicians, break your bigger pieces into chunks like "K.417 - Exposition", and also define an item for the entire performance like "K. 417 - Friendly, Accurate Performance"</string>
+Classical musicians, break your bigger pieces into chunks like &quot;K.417 - Exposition&quot;, and also define an item for the entire performance like &quot;K. 417 - Friendly, Accurate Performance&quot;</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -310,13 +310,13 @@ This puts it on the home screen for quick access</string>
 					<key>note</key>
 					<string>Details, Rename, Duplicate, Delete</string>
 					<key>subtitle</key>
-					<string>On the practice item list, press the "..." button to reveal these options.
+					<string>On the practice item list, press the &quot;...&quot; button to reveal these options.
 
-Details gives you access to that item's statistics, recordings, notes, and history.
+Details gives you access to that item&apos;s statistics, recordings, notes, and history.
 
-Duplicate is great for quickly creating related items like "Arpeggios - Major", "Arpeggios - Minor", "Arpeggios - Whole Tone", etc.
+Duplicate is great for quickly creating related items like &quot;Arpeggios - Major&quot;, &quot;Arpeggios - Minor&quot;, &quot;Arpeggios - Whole Tone&quot;, etc.
 
-Delete removes a practice item from your data and saved practice sessions, but all practice history remains</string>
+Delete removes a practice item from your data and saved practice lists, but all practice history remains</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -327,20 +327,20 @@ Delete removes a practice item from your data and saved practice sessions, but a
 			<key>id</key>
 			<string>playlist1-30000</string>
 			<key>name</key>
-			<string>The Tao of Practice Sessions</string>
+			<string>The Tao of Practice Lists</string>
 			<key>notes</key>
 			<array>
 				<dict>
 					<key>id</key>
 					<string>replaceMeWithAProperID8</string>
 					<key>note</key>
-					<string>What are Practice Sessions</string>
+					<string>What are Practice Lists</string>
 					<key>subtitle</key>
-					<string>Organize your practice items into practice sessions.
+					<string>Organize your practice items into practice lists.
 
 There are a couple examples included, and you can make your own.
 
-Press the "+" button on the home screen, select at least one item, and press "Add to Practice Session"</string>
+Press the &quot;+&quot; button on the home screen, select at least one item, and press &quot;Add to Practice List&quot;</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -352,7 +352,7 @@ Press the "+" button on the home screen, select at least one item, and press "Ad
 
 Shake the phone to shuffle.
 
-Use the "...Duplicate" option to create interleaved practice sessions, e.g. A-B-A-C-A-D format</string>
+Use the &quot;...Duplicate&quot; option to create interleaved practice lists, e.g. A-B-A-C-A-D format</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -360,9 +360,9 @@ Use the "...Duplicate" option to create interleaved practice sessions, e.g. A-B-
 					<key>note</key>
 					<string>Naming &amp; Saving</string>
 					<key>subtitle</key>
-					<string>You must give a session a name to save it. Otherwise, it's temporary.
+					<string>You must give a session a name to save it. Otherwise, it&apos;s temporary.
 
-When you save a practice session, it remembers the order and timers, and will track statistics for the session</string>
+When you save a practice list, it remembers the order and timers, and will track statistics for the session</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -370,9 +370,9 @@ When you save a practice session, it remembers the order and timers, and will tr
 					<key>note</key>
 					<string>Starting &amp; Finishing</string>
 					<key>subtitle</key>
-					<string>On the Practice Session detail page, press the Start button or any item to start practicing.
+					<string>On the Practice List detail page, press the Start button or any item to start practicing.
 
-When you're done, press "Finish" and your progress will be saved</string>
+When you&apos;re done, press &quot;Finish&quot; and your progress will be saved</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -382,13 +382,13 @@ When you're done, press "Finish" and your progress will be saved</string>
 					<key>subtitle</key>
 					<string>Consider some possibilities...
 
-Create practice sessions for each day of the week, assigning themes to each day. Use numbers to force ordering.
+Create practice lists for each day of the week, assigning themes to each day. Use numbers to force ordering.
 
 E.g.,
- "1 - Monday - Physical Ease",
- "2 - Tuesday - Dynamics", etc.
+ &quot;1 - Monday - Physical Ease&quot;,
+ &quot;2 - Tuesday - Dynamics&quot;, etc.
 
-Use the "Duplicate Session" feature with date-stamped sessions to plan and calendar similar days' practice.
+Use the &quot;Duplicate Session&quot; feature with date-stamped sessions to plan and calendar similar days&apos; practice.
 
 Set up a technical exercises session contaning all your technique in one place. Use shake to shuffle and just work 20 minutes of random technique each day.
 
@@ -414,11 +414,11 @@ Create a whole session for a single piece of music. Define related items (using 
 					<key>subtitle</key>
 					<string>The timer just tracks time. Tap to pause it.
 
-Self-recording is right below. Saving is optional! (see "Note on Recordings")
+Self-recording is right below. Saving is optional! (see &quot;Note on Recordings&quot;)
 
-The toolbar at the bottom is documented in "Learn the Tools"
+The toolbar at the bottom is documented in &quot;Learn the Tools&quot;
 
-Press "Done" to finish practicing an item and rate your mastery</string>
+Press &quot;Done&quot; to finish practicing an item and rate your mastery</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -430,9 +430,9 @@ Press "Done" to finish practicing an item and rate your mastery</string>
 
 Press the big record button to start/stop recording.
 
-Modacity is built for fast "scratchpad"-style recording. You must press the "download" button to save your recordings.
+Modacity is built for fast &quot;scratchpad&quot;-style recording. You must press the &quot;download&quot; button to save your recordings.
 
-Saved recordings are available in the item details or from the home screen's "Overview" menu.
+Saved recordings are available in the item details or from the home screen&apos;s &quot;Overview&quot; menu.
 
 Recordings are saved locally inside Modacity, and are *not* uploaded to the cloud.
 
@@ -452,7 +452,7 @@ Go ahead and archive this note and make a quick recording!</string>
 4. Timer - set a countdown timer.
 5. Chat - we love hearing from you! Ask practice questions, make Modacity suggestions, or just say hi.
 
-Go ahead and exit this note and press the 'Improve' button.</string>
+Go ahead and exit this note and press the &apos;Improve&apos; button.</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -462,7 +462,7 @@ Go ahead and exit this note and press the 'Improve' button.</string>
 					<key>subtitle</key>
 					<string>This is a great way to do cyclical practice. E.g., create a note for every key of major scales. Swipe up when you practice that key.
 
- Once you've worked through all keys, unarchive them and go through the cycle again.</string>
+ Once you&apos;ve worked through all keys, unarchive them and go through the cycle again.</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -486,11 +486,11 @@ Go ahead and exit this note and press the 'Improve' button.</string>
 
 No matter what, we track all time spent practicing, and show it in your history/stats.
 
-Use the timer tool on the practicing screen or Practice Session view.
+Use the timer tool on the practicing screen or Practice List view.
 
 To clear a countdown timer, activate the timer tool and delete all time, then press the checkmark to save.
 
-After pressing "Done", you will only be asked to rate mastery if a timer is finished
+After pressing &quot;Done&quot;, you will only be asked to rate mastery if a timer is finished
 </string>
 				</dict>
 				<dict>
@@ -503,7 +503,7 @@ After pressing "Done", you will only be asked to rate mastery if a timer is fini
 
 You can tap the up/down arrows next to the time display to switch modes between count-up and count-down.
 
-💡There's an optional setting to have timers paused during note-taking &amp; deliberate practice. See "Settings"</string>
+💡There&apos;s an optional setting to have timers paused during note-taking &amp; deliberate practice. See &quot;Settings&quot;</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -523,7 +523,7 @@ You can tap the up/down arrows next to the time display to switch modes between 
 					<key>note</key>
 					<string>Where are Settings?</string>
 					<key>subtitle</key>
-					<string>You can only access settings outside of practice sessions. From the home screen press the top left "hamburger" icon to access settings.
+					<string>You can only access settings outside of practice lists. From the home screen press the top left &quot;hamburger&quot; icon to access settings.
 There are too many to list here!</string>
 				</dict>
 				<dict>
@@ -536,7 +536,7 @@ There are too many to list here!</string>
 
 This currently requires manual sync, which can be accessed at Settings...App Data...Refresh
 
-Note: Currently, recordings are not uploaded or sync'd.</string>
+Note: Currently, recordings are not uploaded or sync&apos;d.</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -548,7 +548,7 @@ Note: Currently, recordings are not uploaded or sync'd.</string>
 
 We are planning a sound settings panel for more control in future versions.
 
-Privacy: Just a confirmation, audio is private and we don't listen to you practice. That's your job! Use that self-recording feature, friend!</string>
+Privacy: Just a confirmation, audio is private and we don&apos;t listen to you practice. That&apos;s your job! Use that self-recording feature, friend!</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -568,13 +568,13 @@ Privacy: Just a confirmation, audio is private and we don't listen to you practi
 					<key>note</key>
 					<string>Practice Strategies</string>
 					<key>subtitle</key>
-					<string>Generally speaking, set up a practice rhythm of "perform, listen, reflect, improve". Modacity makes this super easy.
+					<string>Generally speaking, set up a practice rhythm of &quot;perform, listen, reflect, improve&quot;. Modacity makes this super easy.
 
 If you are learning a new piece, consider working from the back to the front. It helps create comfort.
 
-Transform all negativity into constructive thought or action. "My intonation sucks" is an example of destructive thinking. If such a thought arises, transform it to the nearest positive neighbor, such as "I value intonation and am working to improve it now".
+Transform all negativity into constructive thought or action. &quot;My intonation sucks&quot; is an example of destructive thinking. If such a thought arises, transform it to the nearest positive neighbor, such as &quot;I value intonation and am working to improve it now&quot;.
 
-Nobody is perfect. Don't strive for perfection, strive for authenticity, flow, and fully engaged musicianship</string>
+Nobody is perfect. Don&apos;t strive for perfection, strive for authenticity, flow, and fully engaged musicianship</string>
 				</dict>
 				<dict>
 					<key>id</key>
@@ -582,9 +582,9 @@ Nobody is perfect. Don't strive for perfection, strive for authenticity, flow, a
 					<key>note</key>
 					<string>Getting over resistance to recording</string>
 					<key>subtitle</key>
-					<string>It's natural to feel resistant to recording and listening to yourself.
+					<string>It&apos;s natural to feel resistant to recording and listening to yourself.
 
-And, it's incredibly important to get over it.
+And, it&apos;s incredibly important to get over it.
 
 You cannot practice well without fully listening to yourself! Taking time to listen is easy on the body, good for the mind, and creates overall faster progress. It also teaches you to appreciate yourself and listen constructively.
 
@@ -600,9 +600,9 @@ Choose to get over any hesitations and just do it!</string>
 					<key>subtitle</key>
 					<string>What if there was a button you could push any time you want to get better?
 
-Well there is, and it's exclusively in Modacity.
+Well there is, and it&apos;s exclusively in Modacity.
 
-Press the improve button whenever things aren't going as you'd like.
+Press the improve button whenever things aren&apos;t going as you&apos;d like.
 
 Usually some mindful strategizing will do wonders.</string>
 				</dict>
@@ -616,7 +616,7 @@ Usually some mindful strategizing will do wonders.</string>
 
 If you get a little better each day at the art and science of practice, your gains will compound.
 
-Use the practice session note-taking tool to log reflections &amp; next actions</string>
+Use the practice list note-taking tool to log reflections &amp; next actions</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -648,7 +648,7 @@ Our mission is to empower &amp; connect musicians with quality tech and supporti
 					<key>subtitle</key>
 					<string>Next up... tuner, spaced repetition, folders &amp; tags, video, practice packs, social features, and more!
 
-We love hearing from you and can't wait to keep building Modacity for our growing community. Send us some love if you have any feedback or suggestions!</string>
+We love hearing from you and can&apos;t wait to keep building Modacity for our growing community. Send us some love if you have any feedback or suggestions!</string>
 				</dict>
 			</array>
 			<key>visible</key>
@@ -710,7 +710,7 @@ We love hearing from you and can't wait to keep building Modacity for our growin
 					<key>note</key>
 					<string>Tap to read about sub-items</string>
 					<key>subtitle</key>
-					<string>This is an example of a "sub-item". 
+					<string>This is an example of a &quot;sub-item&quot;. 
 
 We will be supporting hierarchal organization in the future. 
 
