Ver 2.4.2(5): [MD-32], [MD-488], [MD-500]

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -46,7 +46,7 @@ def shared_pods
     
     pod 'ReachabilitySwift'
     
-    pod 'YouTubePlayer-Swift'
+    pod 'YoutubePlayer-in-WKWebView'
     
     pod 'SwiftMoment'
 #    pod 'CalendarView'
