Apple signin feature

--- a/Modacity/Podfile
+++ b/Modacity/Podfile
@@ -6,7 +6,7 @@ def shared_pods
     pod 'Intercom'
     pod 'TPKeyboardAvoiding'
     pod 'ObjectMapper'
-    pod 'AppsFlyerFramework'
+    pod 'AppsFlyerFramework', '~> 4.8.9'
     
     pod 'Firebase/Core'
     pod 'Firebase/Auth'
@@ -19,7 +19,7 @@ def shared_pods
     
     pod 'LGSideMenuController'
     
-    pod 'GoogleSignIn'
+    pod 'GoogleSignIn', '~> 4.2.0'
     
     pod 'UITextView+Placeholder'
     
@@ -44,7 +44,7 @@ def shared_pods
     
     pod 'DGActivityIndicatorView'
     
-    pod 'ReachabilitySwift'
+    pod 'ReachabilitySwift', '~> 4.2.0'
     
     pod 'YoutubePlayer-in-WKWebView'
     
